Policy blog: our response to NTIA RFC on AI Accountability (#1245)
* Create policy_ntia_rfc.md

* Delete policy_ntia_rfc.md

* Create policy-ntia-rfc.md

* Create .gitignore

* Add files via upload

* Add files via upload

* Delete .gitignore

* Update policy-ntia-rfc.md

* Update _blog.yml

* title update: blog

* title update: index

* Update policy-ntia-rfc.md

Typo

* Update policy-ntia-rfc.md (#1247)

Typo + wording change (after reading, realized "them" sounded like it referred to the users).

---------

Co-authored-by: meg <90473723+meg-huggingface@users.noreply.github.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -1062,6 +1062,7 @@
   date: August 1, 2022
   tags:
     - community
+    - ethics
 
 - local: nystromformer
   title: "Nyströmformer, Approximating self-attention in linear time and memory via the Nyström method"
@@ -2358,11 +2359,20 @@
     - research
     - time-series
 
-# - local: mms_adapters
-#   title: "Fine-tuning MMS Adapter Models for Multi-Lingual ASR"
-#   author: patrickvonplaten
-#   thumbnail: /blog/assets/151_mms/mms_map.png
-#   date: June 19, 2023
-#   tags:
-#     - audio
-#     - research
+- local: policy-ntia-rfc
+  title: "AI Policy @🤗: Response to the U.S. NTIA's Request for Comment on AI Accountability"
+  author: yjernite
+  thumbnail: /blog/assets/151_policy_ntia_rfc/us_policy_thumbnail.png
+  date: June 20, 2023
+  tags:
+    - community
+    - ethics
+
+- local: mms_adapters
+  title: "Fine-tuning MMS Adapter Models for Multi-Lingual ASR"
+  author: patrickvonplaten
+  thumbnail: /blog/assets/151_mms/mms_map.png
+  date: June 19, 2023
+  tags:
+    - audio
+    - research
