--- a/_blog.yml
+++ b/_blog.yml
@@ -2379,10 +2379,11 @@
 
 - local: panel-on-hugging-face
   title: "Panel on Hugging Face"
-  author: philippjfr, sophiamyang
-  thumbnail: /blog/assets/panel-on-hugging-face/thumbnail.png
+  author: sophiamyang
+  thumbnail: /blog/assets/panel-on-hugging-face/thumbnail.jpeg
   date: June 22, 2023
   tags:
+    - open-source-collab
     - panel
     - deployment
     - spaces
