add Panel on Hugging Face blog post (#1252)
* add Panel on Hugging Face blog post

* Update panel-on-hugging-face.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* removed the HF section, resized image, and edited metadata

---------

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2376,3 +2376,16 @@
   tags:
     - audio
     - research
+
+- local: panel-on-hugging-face
+  title: "Panel on Hugging Face"
+  author: sophiamyang
+  thumbnail: /blog/assets/panel-on-hugging-face/thumbnail.jpeg
+  date: June 22, 2023
+  tags:
+    - open-source-collab
+    - panel
+    - deployment
+    - spaces
+    - visualization
+    - apps
