adding blog yaml

--- a/_blog.yml
+++ b/_blog.yml
@@ -2376,3 +2376,15 @@
   tags:
     - audio
     - research
+
+- local: evaluating-mmlu-leaderboard
+  title: "What's going on with the Open LLM Leaderboard?"
+  author: clefourier
+  thumbnail: /blog/assets/evaluating-mmlu-leaderboard/thumbnail.png
+  date: June 23, 2023
+  tags:
+    - community
+    - research
+    - nlp
+    - evaluation
+    - leaderboard
