--- a/zh/_blog.yml
+++ b/zh/_blog.yml
@@ -625,11 +625,11 @@
     - audio
     - research
 
-- local: policy-ntia-rfc
-  title: "人工智能政策@🤗：回应美国国家电信和信息管理局（ NTIA ）关于人工智能问责制的评论请求"
-  author: yjernite
-  thumbnail: /blog/assets/151_policy_ntia_rfc/us_policy_thumbnail.png
-  date: June 20, 2023
-  tags:
-    - community
-    - ethics
+# - local: policy-ntia-rfc
+#   title: "人工智能政策@🤗：回应美国国家电信和信息管理局（ NTIA ）关于人工智能问责制的评论请求"
+#   author: yjernite
+#   thumbnail: /blog/assets/151_policy_ntia_rfc/us_policy_thumbnail.png
+#   date: June 20, 2023
+#   tags:
+#     - community
+#     - ethics
