--- a/_blog.yml
+++ b/_blog.yml
@@ -2422,3 +2422,13 @@
     - nlp
     - cv
     - hardware
+
+- local: text-to-webapp
+  title: "Making a web app generator with open ML models"
+  author: jbilcke-hf
+  thumbnail: /blog/assets/153_text_to_webapp/thumbnail.jpg
+  date: July 3, 2023
+  tags:
+    - guide
+    - llm
+    - apps
