--- a/_blog.yml
+++ b/_blog.yml
@@ -2432,3 +2432,14 @@
     - guide
     - llm
     - apps
+
+- local: inference-endpoints-llm
+  title: "Deploy LLMs with Hugging Face Inference Endpoints"
+  author: philschmid
+  thumbnail: /blog/assets/155_inference_endpoints_llm/thumbnail.jpg
+  date: July 4, 2023
+  tags:
+    - guide
+    - llm
+    - apps
+    - inference
