--- a/_blog.yml
+++ b/_blog.yml
@@ -2422,3 +2422,15 @@
     - nlp
     - cv
     - hardware
+
+- local: ml-web-games
+  title: "Making ML-powered web games with Transformers.js"
+  author: Xenova
+  thumbnail: /blog/assets/ml-web-games/thumbnail.png
+  date: July 5, 2023
+  tags:
+    - game-dev
+    - guide
+    - web
+    - javascript
+    - transformers.js
