--- a/zh/_blog.yml
+++ b/zh/_blog.yml
@@ -653,3 +653,11 @@
 #   tags:
 #     - community
 #     - ethics
+
+- local: ethics-soc-4
+  title: "道德与社会问题简报 #4：文生图模型中的偏见"
+  author:  sasha
+  thumbnail: /blog/assets/152_ethics_soc_4/ethics_4_thumbnail.png
+  date: June 26, 2023
+  tags:
+    - ethics
