draft huggylingo post

--- a/_blog.yml
+++ b/_blog.yml
@@ -2455,3 +2455,12 @@
     - web
     - javascript
     - transformers.js
+
+- local: huggylingo
+  title: "Using Machine Learning to Improve Language Metadata on the Hugging Face Hub"
+  author: davanstrien
+  thumbnail: # TODO 
+  date: July 12, 2023
+  tags:
+    - announcement 
+    - research
