--- a/_events.yml
+++ b/_events.yml
@@ -3,6 +3,11 @@
 #                                             (e.g. specifying event date range like Jan 24 to Feb 7, 2022)
 # pro tip: put strings e.g. name or description in "quotes" or do not include special characters incl. ':' '[' 
 
+- name: "Free Workshop: Text and Image Generation with Inferentia2"
+  link: https://aws-startup-lofts.com/amer/loft/new-york/e/af1cc/ml-workshop-text-and-image-generation-with-hugging-face-and-aws-inferentia
+  date: Jul 25, 2023
+  description: "[New York] Learn how to save money deploying text and image Generative AI models on AWS Inferentia2!"
+
 - name: "Hugging Cast v3 - Live AI News and Demos"
   link: https://streamyard.com/watch/6k35DN7h5n64
   date: June 29, 2023
