--- a/_blog.yml
+++ b/_blog.yml
@@ -2459,7 +2459,6 @@
     - javascript
     - transformers.js
 
-
 - local: stable-diffusion-finetuning-intel
   title: "Fine-tuning Stable Diffusion models on Intel CPUs"
   author: juliensimon
@@ -2571,3 +2570,15 @@
     - cv
     - diffusion
     - game-dev
+
+- local: encrypted-llm
+  title: "Towards Encrypted Large Language Models with FHE"
+  author: RomanBredehoft
+  thumbnail: /blog/assets/encrypted-llm/thumbnail.png
+  date: August 02, 2023
+  tags:
+    - guide
+    - privacy
+    - research
+    - FHE
+    - llm
