--- a/zh/_blog.yml
+++ b/zh/_blog.yml
@@ -571,6 +571,18 @@
     - community
     - research
 
+- local: generative-ai-models-on-intel-cpu
+  title: "越小越好：Q8-Chat，在英特尔至强 CPU 上体验高效的生成式 AI"
+  thumbnail: /blog/assets/143_q8chat/thumbnail.png
+  author: andyll7772
+  date: May 16, 2023
+  tags:
+    - llm
+    - nlp
+    - inference
+    - intel
+    - quantization
+
 - local: instruction-tuning-sd
   title: "使用 InstructPix2Pix 对 Stable Diffusion 进行指令微调"
   author: sayakpaul
@@ -583,17 +595,17 @@
     - research
     - guide 
 
-- local: generative-ai-models-on-intel-cpu
-  title: "越小越好：Q8-Chat，在英特尔至强 CPU 上体验高效的生成式 AI"
-  thumbnail: /blog/assets/143_q8chat/thumbnail.png
-  author: andyll7772
-  date: May 16, 2023
+- local: train-optimize-sd-intel
+  title: "基于 NNCF 和 🤗 Optimum 面向 Intel CPU 对 Stable Diffusion 优化"
+  author: AlexKoff88
+  thumbnail: /blog/assets/train_optimize_sd_intel/thumbnail.png
+  date: May 25, 2023
   tags:
-    - llm
-    - nlp
-    - inference
+    - diffusers
+    - cpu
     - intel
-    - quantization
+    - guide
+      - quantization
 
 - local: unity-asr
   title: "如何在 Unity 游戏中集成 AI 语音识别？"
