--- a/_blog.yml
+++ b/_blog.yml
@@ -2455,3 +2455,14 @@
     - web
     - javascript
     - transformers.js
+
+- local: stable-diffusion-finetuning-intel
+  title: "Fine-tuning Stable Diffusion models on Intel CPUs"
+  author: juliensimon
+  thumbnail: /blog/assets/stable-diffusion-finetuning-intel/dicoo_image.png
+  date: July 14, 2023
+  tags:
+    - guide
+    - intel
+    - hardware
+    - partnerships
