Brief Compilation of Open-Source Text Generation ecosystem blog post (#1296)
---------

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>
Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>
Co-authored-by: Sayak Paul <spsayakpaul@gmail.com>
Co-authored-by: Philipp Schmid <32632186+philschmid@users.noreply.github.com>
Co-authored-by: lewtun <lewis.c.tunstall@gmail.com>
Co-authored-by: Kashif Rasul <kashif.rasul@gmail.com>
Co-authored-by: Yacine Jernite <yjernite@users.noreply.github.com>
Co-authored-by: Julien Chaumond <julien@huggingface.co>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2456,6 +2456,7 @@
     - javascript
     - transformers.js
 
+
 - local: stable-diffusion-finetuning-intel
   title: "Fine-tuning Stable Diffusion models on Intel CPUs"
   author: juliensimon
@@ -2466,3 +2467,13 @@
     - intel
     - hardware
     - partnerships
+
+- local: os-llms
+  title: "Open-Source Text Generation & LLM Ecosystem at Hugging Face"
+  author: merve
+  thumbnail: /blog/assets/os-llms/thumbnail.png
+  date: July 17, 2023
+  tags:
+    - LLM
+    - inference
+    - nlp
