New blog post: building an AI WebTV (#1304)
* Add: ai-webtv.md blog post about building an AI WebTV

* small update to the ai-webtv blog post

* Update ai-webtv.md

* Update ai-webtv.md (fix typo)

* Update ai-webtv.md (fix typo)

* Update ai-webtv.md

* Update ai-webtv.md

Co-authored-by: Joshua Lochner <admin@xenova.com>

* Update ai-webtv.md

Co-authored-by: Joshua Lochner <admin@xenova.com>

* Update ai-webtv.md

Co-authored-by: Joshua Lochner <admin@xenova.com>

* Update ai-webtv.md

Co-authored-by: Joshua Lochner <admin@xenova.com>

* Update ai-webtv.md

Co-authored-by: Joshua Lochner <admin@xenova.com>

* Update ai-webtv.md

Co-authored-by: Joshua Lochner <admin@xenova.com>

* Update ai-webtv.md

Co-authored-by: Joshua Lochner <admin@xenova.com>

* Update ai-webtv.md

Co-authored-by: Joshua Lochner <admin@xenova.com>

* Update ai-webtv.md

Co-authored-by: Joshua Lochner <admin@xenova.com>

* Update ai-webtv.md

Co-authored-by: Joshua Lochner <admin@xenova.com>

* Update ai-webtv.md

Co-authored-by: Joshua Lochner <admin@xenova.com>

* Update ai-webtv.md

* Update ai-webtv.md

Co-authored-by: Joshua Lochner <admin@xenova.com>

* Update ai-webtv.md

* rewrite the paragraph about simulation

* fix further typos

* use the animated gif for the thumbnail

* Update ai-webtv.md

Co-authored-by: Joshua Lochner <admin@xenova.com>

* Update ai-webtv.md

Co-authored-by: Joshua Lochner <admin@xenova.com>

* Update ai-webtv.md

Co-authored-by: Joshua Lochner <admin@xenova.com>

* Update ai-webtv.md

Co-authored-by: Joshua Lochner <admin@xenova.com>

* Update ai-webtv.md

Co-authored-by: Joshua Lochner <admin@xenova.com>

* Update ai-webtv.md

Co-authored-by: Joshua Lochner <admin@xenova.com>

* Update ai-webtv.md

Co-authored-by: Joshua Lochner <admin@xenova.com>

* Update ai-webtv.md

Co-authored-by: Joshua Lochner <admin@xenova.com>

* Update ai-webtv.md

Co-authored-

--- a/_blog.yml
+++ b/_blog.yml
@@ -2477,3 +2477,12 @@
     - LLM
     - inference
     - nlp
+
+- local: ai-webtv
+  title: "Building an AI WebTV"
+  author: jbilcke-hf
+  thumbnail: /blog/assets/156_ai_webtv/thumbnail.gif
+  date: July 17, 2023
+  tags:
+    - text-to-video
+    - guide
