👷 Use simple script to validate yaml

--- a/.github/workflows/validate-yaml.yml
+++ b/.github/workflows/validate-yaml.yml
@@ -6,44 +6,23 @@ on:
     paths: 
       - "**/_*.yml"
       - "schemas/_*.schema.yml"
+      - ".github/workflows/validate-yaml.yml"
   pull_request:
     paths: 
       - "**/_*.yml"
       - "schemas/_*.schema.yml"
+      - ".github/workflows/validate-yaml.yml"
+
+defaults:
+  run:
+    working-directory: scripts
 
 jobs:
   yaml-schema-validation:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: "Validate _events.yml"
-      uses: nrkno/yaml-schema-validator-github-action@v4
-      with:
-        schema: schemas/_events.schema.yml
-        target: _events.yml
-    - name: "Validate _blog.yml"
-      uses: nrkno/yaml-schema-validator-github-action@v4
-      with:
-        schema: schemas/_blog.schema.yml
-        target: _blog.yml
-    - name: "Validate _tags.yml"
-      uses: nrkno/yaml-schema-validator-github-action@v4
-      with:
-        schema: schemas/_tags.schema.yml
-        target: _tags.yml
-    # Chinese translation of blog
-    - name: "Validate _events.yml (chinese translation)"
-      uses: nrkno/yaml-schema-validator-github-action@v4
-      with:
-        schema: schemas/_events.schema.yml
-        target: zh/_events.yml
-    - name: "Validate _blog.yml (chinese translation)"
-      uses: nrkno/yaml-schema-validator-github-action@v4
-      with:
-        schema: schemas/_blog.schema.yml
-        target: zh/_blog.yml
-    - name: "Validate _tags.yml (chinese translation)"
-      uses: nrkno/yaml-schema-validator-github-action@v4
-      with:
-        schema: schemas/_tags.schema.yml
-        target: zh/_tags.yml
+      - uses: actions/checkout@v3
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.x
+      - run: deno run --allow-net --allow-read ./validate-yaml.ts
