--- a/_blog.yml
+++ b/_blog.yml
@@ -2490,7 +2490,7 @@
 - local: llama2
   title: "Llama 2 is here - get it on Hugging Face"
   author: philschmid
-  thumbnail: /blog/assets/llama2/thumbnail.png
+  thumbnail: /blog/assets/llama2/thumbnail.jpg
   date: July 18, 2023
   tags:
     - nlp
