Apply suggestions from code review
Co-authored-by: Sayak Paul <spsayakpaul@gmail.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2471,8 +2471,9 @@
   title: "Happy 1st anniversary 🤗 Diffusers!"
   author: stevhliu
   thumbnail: /blog/assets/diffusers-turns-1/diffusers-turns-1.png
-  date: July 18, 2023
+  date: July 20, 2023
   tags:
     - community
     - open-source-collab
     - diffusion
+    - diffusers
