Diffusers anniversary blog post (#1307)
* add blog post

* turn into md

* minor copyedits.

* Apply suggestions from code review

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Apply suggestions from code review

* apply feedback

* create folder

* Add files via upload

* Delete .gitkeep

* add thumbnail

* Update _blog.yml

* Update diffusers-turns-1.md

Co-authored-by: Giada Pistilli <65015824+giadilli@users.noreply.github.com>

* Apply suggestions from code review

Co-authored-by: Sayak Paul <spsayakpaul@gmail.com>

* Update diffusers-turns-1.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* optimize png.

* add toc and note for audio pipelines.

* add: a list of the ninja contributors.

* Update diffusers-turns-1.md

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

* Apply suggestions from code review

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>
Co-authored-by: Bertrand CHEVRIER <bertrand@huggingface.co>

* Update diffusers-turns-1.md

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

---------

Co-authored-by: Sayak Paul <spsayakpaul@gmail.com>
Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>
Co-authored-by: Giada Pistilli <65015824+giadilli@users.noreply.github.com>
Co-authored-by: Pedro Cuenca <pedro@huggingface.co>
Co-authored-by: Bertrand CHEVRIER <bertrand@huggingface.co>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2497,3 +2497,14 @@
     - community
     - research
     - LLM
+
+- local: diffusers-turns-1
+  title: "Happy 1st anniversary 🤗 Diffusers!"
+  author: stevhliu
+  thumbnail: /blog/assets/diffusers-turns-1/diffusers-turns-1.png
+  date: July 20, 2023
+  tags:
+    - community
+    - open-source-collab
+    - diffusion
+    - diffusers
