--- a/_blog.yml
+++ b/_blog.yml
@@ -2497,3 +2497,11 @@
     - community
     - research
     - LLM
+    
+- local: game-jam-first-edition-results
+  title: "Results of the Open Source AI Game Jam"
+  author: simoninithomas
+  thumbnail: /blog/assets/game-jam-first-edition-results/thumbnail.jpg
+  date: July 21, 2023
+  tags:
+    - game-dev
