Game Jam results (#1332)
* Create game-jam-first-edition-results.md

* Update game-jam-first-edition-results.md

* Update game-jam-first-edition-results.md

* Update game-jam-first-edition-results.md

* Update game-jam-first-edition-results.md

* Update game-jam-first-edition-results.md

* Update game-jam-first-edition-results.md

* Update game-jam-first-edition-results.md

* Update _blog.yml

* Update game-jam-first-edition-results.md

--- a/_blog.yml
+++ b/_blog.yml
@@ -2508,3 +2508,11 @@
     - open-source-collab
     - diffusion
     - diffusers
+
+- local: game-jam-first-edition-results
+  title: "Results of the Open Source AI Game Jam"
+  author: simoninithomas
+  thumbnail: /blog/assets/game-jam-first-edition-results/thumbnail.jpg
+  date: July 21, 2023
+  tags:
+    - game-dev
