--- a/_events.yml
+++ b/_events.yml
@@ -3,6 +3,11 @@
 #                                             (e.g. specifying event date range like Jan 24 to Feb 7, 2022)
 # pro tip: put strings e.g. name or description in "quotes" or do not include special characters incl. ':' '[' 
 
+- name: "Hugging Cast v4 - Live AI News and Demos"
+  link: https://streamyard.com/watch/ujrA4pG3ixAm
+  date: July 27, 2023
+  description: "Join our live show - we'll discuss LLaMa 2 with our special guest Omar, and demo how to deploy it!"
+
 - name: "Free Workshop: Text and Image Generation with Inferentia2"
   link: https://aws-startup-lofts.com/amer/loft/new-york/e/af1cc/ml-workshop-text-and-image-generation-with-hugging-face-and-aws-inferentia
   date: Jul 25, 2023
