--- a/_blog.yml
+++ b/_blog.yml
@@ -2518,9 +2518,9 @@
     - game-dev
 
 - local: agents-js
-  title: "Give tools to your LLMs directly from javascript with @huggingface/agents 🤖"
+  title: "Introducing Agents.js: Give your LLMs tools using javascript"
   author: nsarrazin
-  thumbnail: /blog/assets/agents-js/thumbnail.jpg
+  thumbnail: /blog/assets/agents-js/thumbnail.png
   date: July 24, 2023
   tags:
     - agents
