add blog post about @huggingface/agents (#1340)
* add blog post about agents in js

* add a few tags

* Update _blog.yml

hugginface 🤠

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Update agents-js.md

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Update agents-js.md

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Update agents-js.md

Co-authored-by: Victor Muštar <victor.mustar@gmail.com>

* Update agents-js.md

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* remove .

* agents.js name

* add link to default model

* Update agents-js.md

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* added thumbnail

* Update agents-js.md

Co-authored-by: Lucain <lucainp@gmail.com>

* unused import

* JavaScript

* link to readme

* title

* -over

* doc fix

* - llama 2

---------

Co-authored-by: Julien Chaumond <julien@huggingface.co>
Co-authored-by: Victor Muštar <victor.mustar@gmail.com>
Co-authored-by: Lucain <lucainp@gmail.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2516,3 +2516,13 @@
   date: July 21, 2023
   tags:
     - game-dev
+
+- local: agents-js
+  title: "Introducing Agents.js: Give tools to your LLMs using JavaScript"
+  author: nsarrazin
+  thumbnail: /blog/assets/agents-js/thumbnail.png
+  date: July 24, 2023
+  tags:
+    - agents
+    - javascript
+    - web
