Update: zh/llama2.md
Signed-off-by: Yao, Matrix <matrix.yao@intel.com>

Proofread: zh/llama2.md

--- a/zh/_blog.yml
+++ b/zh/_blog.yml
@@ -718,3 +718,13 @@
     - hardware
     - partnerships
 
+- local: llama2
+  title: "Llama 2 来袭 - 在 Hugging Face 上玩转它"
+  author: osanseviero
+  thumbnail: /blog/assets/llama2/thumbnail.jpg
+  date: July 18, 2023
+  tags:
+    - nlp
+    - community
+    - research
+    - LLM
