--- a/zh/_blog.yml
+++ b/zh/_blog.yml
@@ -728,3 +728,14 @@
     - community
     - research
     - LLM
+
+- local: diffusers-turns-1
+  title: "🤗 Diffusers 一岁啦!"
+  author: stevhliu
+  thumbnail: /blog/assets/diffusers-turns-1/diffusers-turns-1.png
+  date: July 20, 2023
+  tags:
+    - community
+    - open-source-collab
+    - diffusion
+    - diffusers
