--- a/_blog.yml
+++ b/_blog.yml
@@ -2456,11 +2456,82 @@
     - javascript
     - transformers.js
 
+
+- local: stable-diffusion-finetuning-intel
+  title: "Fine-tuning Stable Diffusion models on Intel CPUs"
+  author: juliensimon
+  thumbnail: /blog/assets/stable-diffusion-finetuning-intel/dicoo_image.png
+  date: July 14, 2023
+  tags:
+    - guide
+    - intel
+    - hardware
+    - partnerships
+
+- local: os-llms
+  title: "Open-Source Text Generation & LLM Ecosystem at Hugging Face"
+  author: merve
+  thumbnail: /blog/assets/os_llms/thumbnail.png
+  date: July 17, 2023
+  tags:
+    - LLM
+    - inference
+    - nlp
+
+- local: ai-webtv
+  title: "Building an AI WebTV"
+  author: jbilcke-hf
+  thumbnail: /blog/assets/156_ai_webtv/thumbnail.gif
+  date: July 17, 2023
+  tags:
+    - text-to-video
+    - guide
+
+- local: llama2
+  title: "Llama 2 is here - get it on Hugging Face"
+  author: osanseviero
+  thumbnail: /blog/assets/llama2/thumbnail.jpg
+  date: July 18, 2023
+  tags:
+    - nlp
+    - community
+    - research
+    - LLM
+
+- local: diffusers-turns-1
+  title: "Happy 1st anniversary 🤗 Diffusers!"
+  author: stevhliu
+  thumbnail: /blog/assets/diffusers-turns-1/diffusers-turns-1.png
+  date: July 20, 2023
+  tags:
+    - community
+    - open-source-collab
+    - diffusion
+    - diffusers
+
+- local: game-jam-first-edition-results
+  title: "Results of the Open Source AI Game Jam"
+  author: ThomasSimonini
+  thumbnail: /blog/assets/game-jam-first-edition-results/thumbnail.jpg
+  date: July 21, 2023
+  tags:
+    - game-dev
+
+- local: agents-js
+  title: "Introducing Agents.js: Give tools to your LLMs using JavaScript"
+  author: nsarrazin
+  thumbnail: /blog/assets/agents-js/thumbnail.png
+  date: July 24, 2023
+  tags:
+    - agents
+    - javascript
+    - web
+
 - local: huggylingo
   title: "Huggy Lingo: Using Machine Learning to Improve Language Metadata on the Hugging Face Hub"
   author: davanstrien
-  thumbnail: # TODO 
-  date: July 12, 2023
+  thumbnail: /blog/assets/156_huggylingo/Huggy_Lingo.png
+  date: July 26, 2023
   tags:
     - announcement 
     - research
