--- a/_blog.yml
+++ b/_blog.yml
@@ -2552,7 +2552,7 @@
 - local: 3d-assets
   title: "Practical 3D Asset Generation: A Step-by-Step Guide"
   author: dylanebert
-  thumbnail: /blog/assets/124_ml-for-games/thumbnail-3d.png
+  thumbnail: /blog/assets/124_ml-for-games/thumbnail-3d.jpg
   date: August 01, 2023
   tags:
     - community
