Segmind SD Distillation Blog (#1356)
* Create Folder

* Add Images

* Add Segmind Distill SD Blog

* Update Image Links

* Update and rename running sd on toasters.md to sd_distillation.md

* Change Picture

* Delete unnecessary file

* Delete old image

* Changed Image Links and Added in Usage and Limitations Section

* Remove Folder

* Add Distillation Entry to _blog.yml

* Added Guest Param in Authors

* Incorporated Changes in _blog.yml

* Add Thumbnail

* Modify Thumbnail

* Change Thumbnail name

* Update sd_distillation.md

* Update sd_distillation.md

Co-authored-by: Sayak Paul <spsayakpaul@gmail.com>

* Update sd_distillation.md

---------

Co-authored-by: Kashif Rasul <kashif.rasul@gmail.com>
Co-authored-by: Sayak Paul <spsayakpaul@gmail.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2549,6 +2549,17 @@
     - stable-diffusion-xl
     - diffusers
 
+- local: sd_distillation
+  title: "Open-sourcing Knowledge Distillation Code and Weights of SD-Small and SD-Tiny"
+  author: harishsegmind
+  guest: true
+  thumbnail: /blog/assets/distill_sd/thumbnail.png
+  date: August 1, 2023
+  tags:
+    - stable-diffusion
+    - research
+    - diffusers
+
 - local: 3d-assets
   title: "Practical 3D Asset Generation: A Step-by-Step Guide"
   author: dylanebert
